@@ -37,7 +37,7 @@ osiris TODO history
 till 1.0.8 you could bug him... later version (1.2.x) are cleaned up and maintained by Nicotine+ Dev.Team.. DO NOT BUG Hyriand
 if you have problems!! Instead, send him a compliment, thank him for the trouble he took to write Nicotine :)
 
-Hydriand's history TODO:
+Hyriand's history TODO:
 	* Find similar / continue existing download (DONE!)
   	* Keyboard list selection [DONE!]
   * Autocompletion:
