@@ -19,4 +19,5 @@ Swedish
  * alimony
 Hungarian
  * djbaloo
-
+Slovak 
+ * Josef Riha
